# hw-cbmc

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CHANGELOG  COMPILING  COMPILING.md  Dockerfile  LICENSE  README.md
.github/workflows/: ebmc-packages.yaml  ebmc-release.yaml  logikbench.yaml  pull-request-checks.yaml  syntax-checks.yaml
3p/: copyright.aiger-1.9
Formula/: ebmc.rb@5.0  ebmc.rb@5.1  ebmc.rb@5.2  ebmc.rb@5.3  ebmc@5.0.rb  ebmc@5.1.rb  ebmc@5.10.rb  ebmc@5.11.rb  ebmc@5.2.rb  ebmc@5.3.rb  ebmc@5.4.rb  ebmc@5.5.rb  ebmc@5.6.rb  ebmc@5.7.rb  ebmc@5.8.rb  ebmc@5.9.rb  ebmc@5.9.test9.rb  ebmc@6.0.rb
benchmarking/: compare4way.sh  compare_ic3.sh  hwmcc08.sh  hwmcc17.sh  logikbench.sh  validate_ic3.sh  validate_new_ic3.sh
benchmarking/bdd_model_checking/: Makefile  benchmark.cpp
benchmarking/fastppa_scaling/: adder_128.sv  adder_16.sv  adder_32.sv  adder_64.sv  adder_8.sv  cmp_128.sv  cmp_16.sv  cmp_32.sv  cmp_64.sv  cmp_8.sv  div_16.sv  div_32.sv  div_64.sv  div_8.sv  idx_16.sv  idx_32.sv  idx_4.sv  idx_64.sv  idx_8.sv  mod_16.sv  mod_32.sv  mod_64.sv  mod_8.sv  mult_16.sv  mult_32.sv  mult_64.sv  mult_8.sv  regfile_16.sv  regfile_32.sv  regfile_4.sv  shift_16.sv  (+6 more)
doc/: pyebmc-design.md
regression/: test.pl
src/: Makefile  common  config.inc  config.inc.template  hw_cbmc_irep_ids.h
src/nuterm/: CMakeLists.txt  README  batch.h  nuterm_main.cpp  pytorch_tests.cpp  traces_to_tensors.cpp  traces_to_tensors.h  training.cpp  training.h  vcd_parser.cpp  vcd_parser.h
unit/: Makefile  unit_tests.cpp
(+5366 files in other folders)
